add poem to root

--- a/root.html
+++ b/root.html
@@ -97,6 +97,35 @@
           </div>
         </div>
         <div class="content__row">
+          <article class="text__wrapper">
+            <div class="text__content">
+              <p>
+                For participatory arts to flourish and grow</br>
+                It must become like a dandelion</br>
+                where one seed lands, later thousands sow</br>
+              </p>
+              <p>
+                To overtake rubble from the space between stones</br>
+                Peaking through abandoned pub gardens</br>
+                protruding from cracks in the patios</br>
+              </p>
+              <p> 
+                Underneath railway bridges with no light below</br>
+                In graveyards and maternity ward car parks</br>
+                Among neglected things by the side of the road</br>
+              </p>
+              <p>
+                Inside demolished factories where nobody shows</br>
+                and fences and locked gates are all that is known</br>
+                and in all other places, people no longer go
+              </p>
+              <div class="text__content--signature">
+                <i>Anonymous</i>
+              </div>
+            </div>
+          </article>
+        </div>
+        <div class="content__row">
           <div class="quote__wrapper">
             <div class="quote__text">
               <aside>
