add quote to grow

--- a/grow.html
+++ b/grow.html
@@ -88,6 +88,18 @@
             </div>
           </article>
         </div>
+        <div class="content__row">
+          <div class="quote__wrapper">
+            <div class="quote__text">
+              <aside>
+                <p>"We want to radically shift how work in the creative sector is done for everyone, but see young people as the best, most fearless, radical and creative way to that."</p>
+              </aisde>
+              <cite>
+                <p>Rising Arts Agency</p>
+              </cite>
+            </div>
+          </div>
+        </div>
         <div class="content__row drag__show">
           <div class="content__column">
             <div class="text__wrapper">
