--- a/root.html
+++ b/root.html
@@ -79,7 +79,7 @@
               </audio>
               </div>
               <div class="audio__caption">
-                <p>"In the gathering garden, community is a sound bedrock - where we grow tall and brave together. Doggedly facing and overcoming challenges through creative thinking. We question, we nurture, we tend to, we listen - carefully - together. "</p>
+                <p>"In the gathering garden, community is a sound bedrock - where we grow tall and brave together. Doggedly facing and overcoming challenges through creative thinking. We question, we nurture, we tend to, we listen - carefully - together."  - <i>Anonymous</i></p>
               </div>
             </div>
           </div>
