--- a/pollinate.html
+++ b/pollinate.html
@@ -29,7 +29,7 @@
                 </audio>
               </div>
               <div class="audio__caption">
-                <p>"As gardeners of participatory art I believe we need to work with heightened awareness of the places, people, contexts and environments that we find ourselves in. We need to understand how we are all interconnected to each other and we all form part of an ecology where we are all inter-dependent and as equally responsible for what happens in that garden. " - <i>anonymous</i>
+                <p>"As gardeners of participatory art I believe we need to work with heightened awareness of the places, people, contexts and environments that we find ourselves in. We need to understand how we are all interconnected to each other and we all form part of an ecology where we are all inter-dependent and as equally responsible for what happens in that garden. " - <i>Anonymous</i>
                 </p>
               </div>
             </div>
@@ -42,7 +42,7 @@
                 alt="a paper with pencil sketches of a plan for garden beds"
                 src="contributions/gabriela_saenger_silva/planning-dithered.webp"/>
               <figcaption class="image__credit">
-                <p>gabriela saenger silva</p>
+                <p>Gabriela Saenger Silva</p>
               </figcaption>
             </figure>
           </div>
@@ -61,7 +61,7 @@
                 alt="greenhouses and garden beds in the summer time"
                 src="contributions/gabriela_saenger_silva/summer_dithered.png"/>
               <figcaption class="image__credit">
-                <p>gabriela saenger silva</p>
+                <p>Gabriela Saenger Silva</p>
               </figcaption>
             </figure>
           </div>
@@ -71,7 +71,7 @@
                 alt="a green bucket with green beans in it"
                 src="contributions/gabriela_saenger_silva/harvest-dithered.webp"/>
               <figcaption class="image__credit">
-                <p>gabriela saenger silva</p>
+                <p>Gabriela Saenger Silva</p>
               </figcaption>
             </figure>
           </div>
@@ -88,7 +88,7 @@
               </audio>
               </div>
               <div class="audio__caption">
-                <p>"The term companion planting is all about nature needing nurture. Like people, not all plants are happy living beside each other. Carefully places, however, one plant can help another by putting suitable nutrients in the soil. This is how I see my role in the arts - as an established tree, I can provide shade, protection from the wind and shelter for others. I can help them to attract the beneficial insects (or, industry contacts). I am here to support early career individuals, helping them to grow and to flourish on their own terms. " - <i>rachel moss</i>
+                <p>"The term companion planting is all about nature needing nurture. Like people, not all plants are happy living beside each other. Carefully places, however, one plant can help another by putting suitable nutrients in the soil. This is how I see my role in the arts - as an established tree, I can provide shade, protection from the wind and shelter for others. I can help them to attract the beneficial insects (or, industry contacts). I am here to support early career individuals, helping them to grow and to flourish on their own terms." - <i>Rachel Moss</i>
                 </p>
               </div>
             </div>
