--- a/flower-bed.html
+++ b/flower-bed.html
@@ -19,6 +19,13 @@
       <div class="content__column">
         <h2>SEED</h2>
       </div>
+      <div class="content__row">
+        <div class="text__wrapper">
+          <div class="text__content">
+            <p>A garden of haikus submitted by our guests. Each time the page is refreshed there will be a new arrangement.</p>
+          </div>
+        </div>
+      </div>  
       <div id="bed"></div>
       <div class="form__wrapper">
         <div id="log" class="form__log"></div>
