--- a/about.html
+++ b/about.html
@@ -38,11 +38,11 @@
           <div class="text__wrapper">
             <div class="text__content">
               <h4 id="about-2">The making of the site</h4>
-              <p>This site was made by artist <a href="https://www.harriethw.com">Harriet Horobin-Worley</a> who's practice revolves around the material reality of the web, knowledge sharing and collaborative work
+              <p>This site was made by artist <a href="https://www.harriethw.com">Harriet Horobin-Worley</a> who's practice revolves around the material reality of the web, knowledge sharing and collaborative work.
               </p>
               <p>"I was inspired by the values of connection, community and sustainability with the design of this site.</p>
               <p>I believe that the web can be a space for connection and communication, that it can provide tools for resilience and growth, but that we must engage with it critically. This site is made with 'low tech' and accessible design, much of it is hand-rolled HTML without the use of javascript frameworks or libraries, so that it uses less computer processing power and will be easier to archive and maintain.</p>
-              <p>I approached building it with the care an attention that one might approach a garden, planting the resources in beds where I thought they would thrive, and hoping that visitors will take from it and leave as much as they need as they walk through the sections."</p>
+              <p>I approached building it with the care and attention that one might approach a garden, planting the resources in beds where I thought they would thrive, and hoping that visitors will take from it and leave as much as they need as they walk through the sections."</p>
             </div>
           </div>
         </div>
