--- a/grow.html
+++ b/grow.html
@@ -114,10 +114,10 @@
             <div class="text__wrapper">
               <div class="text__content">
                 <p>
-              add your own manifesto words and drag the assets below to make
-              your own poster collage. (you can screenshot it when you're
-              finished it as it won't be saved if you refresh the page)
-            </p>
+                  Add your own manifesto words and drag the assets below to make
+                  your own poster collage (you can screenshot it when you're
+                  finished it as it won't be saved if you refresh the page).
+                </p>
               </div>
             </div>
           </div>
