--- a/flower-bed.html
+++ b/flower-bed.html
@@ -31,7 +31,7 @@
         <div id="log" class="form__log"></div>
         <form id="flower-form" action="" method="get">
           <div class="form__input">
-            <label for="text">Plant some words in the gathering garden, enter your thoughts: </label>
+            <label for="text">Plant some words in the Gathering Garden, enter your thoughts: </label>
             <textarea type="text" name="text" id="text" maxlength="200" required></textarea>
           </div>
           <div class="form__input">
