add demands to grow

--- a/grow.html
+++ b/grow.html
@@ -100,6 +100,27 @@
             </div>
           </div>
         </div>
+        <div class="content__row">
+          <article class="text__wrapper">
+            <div class="text__content">
+              <p><em>Demands:</em></p>
+              <ul>
+                <li>
+                  Don't hoard resources - especially property! Force landlords to allow communities to use vacant shopping centre, etc spaces for community/creativity
+                </li>
+                <li>
+                  LONGER AND MORE INCLUSIVE RESIDENCIES - allows for more engagement, build in "office hours" for dialogue with locals
+                </li>
+                <li>
+                  Decentralise Power - decisions made by people to address what they want, not a nation wide programme or concept that is imposed not negotiated / collaborative
+                </li>
+              </ul>
+              <div class="text__content--signature">
+                <p>Anonymous</p>
+              </div>
+            </div>
+          </article>
+        </div>
         <div class="content__row drag__show">
           <div class="content__column">
             <div class="text__wrapper">
