add poem to pollinate

--- a/pollinate.html
+++ b/pollinate.html
@@ -95,6 +95,29 @@
           </div>
         </div>
         <div class="content__row">
+          <article class="text__wrapper">
+            <div class="text__heading">
+              <h3>GATHERING GARDEN</h3>
+              <img
+                class="text__heading--background"
+                alt="background image of blurry woods"
+                src="contributions/dither_it_djuna_mount.png"/>
+            </div>
+            <div class="text__content">
+              <p>trellis- infrastructure- stable access for inclusion to prevent plants from withering, to support threshold and entry.</p>
+
+              <p>sunflowers-regenerative- seeds fall and feed others. They replant themselves.</p>
+
+              <p>collective imagination- vision of where to plant things, where will the sun hit? Permission to replant/restructure in response to the weather.</p>
+
+              <p>Adaptability. Holistic overview-time to think-creating blueprints for the garden.</p>
+              <div class="text__content--signature">
+                  <i>Anonymous</i>
+              </div>
+            </div>
+          </article>
+        </div>
+        <div class="content__row">
           <div class="quote__wrapper">
             <div class="quote__text">
               <aside>
