--- a/root.html
+++ b/root.html
@@ -91,7 +91,7 @@
                 alt="a small stone with blue flowers drawn on it"
                 src="./contributions/lottie_rimmer.webp"/>
               <figcaption class="image__credit">
-                <p>lottie rimmer</p>
+                <p>Lottie Rimmer</p>
               </figcaption>
             </figure>
           </div>
