--- a/grow.html
+++ b/grow.html
@@ -169,13 +169,15 @@
             <img
             draggable="false"
             alt=""
-            src="./assets/cyanotype_flowers.webp"/>
+            src="./assets/cyanotype_1.webp"
+            style="width:400px;"/>
           </div>
           <div draggable="true" class="draggable__image draggable" data-item="6">
             <img
             draggable="false"
             alt=""
-            src="./assets/cyanotype_horsehair.webp"/>
+            src="./assets/cyanotype_3.webp"
+            style="width:400px;"/>
           </div>
         </div>
         <div id="draggable-space" class="draggable__space drag__hide"></div>
