add different quotes

--- a/grow.html
+++ b/grow.html
@@ -37,10 +37,10 @@
           <div class="quote__wrapper">
             <div class="quote__text">
               <aside>
-                <p>"How do we widen these movements, how do we widen out who can be part of this?"</p>
+                <p>"These so-called weeds have been planted, they are weeds no more, but the right plants in the right place"</p>
               </aisde>
               <cite>
-                <p>Suzanne Dhawali</p>
+                <p>Calum Bayne, In-Situ</p>
               </cite>
             </div>
           </div>
@@ -95,7 +95,7 @@
                 <p>"We want to radically shift how work in the creative sector is done for everyone, but see young people as the best, most fearless, radical and creative way to that."</p>
               </aisde>
               <cite>
-                <p>Rising Arts Agency</p>
+                <p>Euella Jackson, Rising Arts Agency</p>
               </cite>
             </div>
           </div>
