--- a/pollinate.html
+++ b/pollinate.html
@@ -121,10 +121,10 @@
           <div class="quote__wrapper">
             <div class="quote__text">
               <aside>
-                <p>"Is the act of dreaming necessary to build movements around collective action? To empower people to be leaders in their communities? To empower people spiritually as well as materially? How can we use dreaming to encourage self organisation and participation?"</p>
+                <p>"Placemaking is about the community leaving their own marks on the surfaces of their neighbourhoods."</p>
               </aisde>
               <cite>
-                <p>Kandace Siobhan Walker</p>
+                <p>Kevin Harrison, Artlink Central</p>
               </cite>
             </div>
           </div>
