refactor order of menu

--- a/grow.html
+++ b/grow.html
@@ -103,7 +103,9 @@
         <div class="content__row">
           <article class="text__wrapper">
             <div class="text__content">
-              <p><em>Demands:</em></p>
+              <p>
+                <em>Demands:</em>
+              </p>
               <ul>
                 <li>
                   Don't hoard resources - especially property! Force landlords to allow communities to use vacant shopping centre, etc spaces for community/creativity
@@ -186,22 +188,22 @@
     <nav role="navigation" aria-label="Main">
       <ul class="nodes">
         <li class="node__wrapper">
-          <a class="sphere__link" href="./root.html">
+          <a class="sphere__link" href="./flower-bed.html">
             <div class="node__title">
-              <p>[root]</p>
+              <p>[seed]</p>
             </div>
-            <div class="sphere__wrapper">
+            <div id="sphere-2" class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
             <div class="node__wave"></div>
           </a>
         </li>
         <li class="node__wrapper">
-          <a class="sphere__link" href="./flower-bed.html">
+          <a class="sphere__link" href="./root.html">
             <div class="node__title">
-              <p>[seed]</p>
+              <p>[root]</p>
             </div>
-            <div id="sphere-2" class="sphere__wrapper">
+            <div class="sphere__wrapper">
               <div class="sphere__gradient"></div>
             </div>
             <div class="node__wave"></div>
